--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,46 @@
 body {
     font-family: 'Montserrat',sans-serif;
 }
+
+h1 {
+    font-family: 'Montserrat',sans-serif;
+    font-size: 3rem;
+    line-height: 1.5;
+   
+}
+
+.navbar {
+    padding: 0 0 4.5rem;
+}
+
+.nav-item {
+    padding: 0px 18px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-family: "Montserrat-light";
+}
+
+.brandname {
+    font-family: 'Ubuntu',sans-serif;
+    font-size: 2.5rem;
+}
+
+.container-fluid {
+    padding: 3% 15%;
+}
+
+#title {
+    background-color: #ff4c68;
+     color: white;
+}
+
+.download-button {
+    margin: 5% 3% 5% 0%;
+}
+
+.iphone {
+    transform: rotate(30deg);
+    width: 60%;
+}
